--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,10 @@
     "react-icons": "^4.2.0",
     "simple-peer": "9.6.2",
     "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.3",
+    "react-copy-to-clipboard": "^5.0.3"
   }
 }
