--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@react-google-maps/api": "^2.1.1",
     "next": "^10.1.3",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
