--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,15 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "emailjs-com": "^2.6.4",
     "@react-google-maps/api": "^2.1.1",
+    "emailjs": "^3.4.0",
+    "emailjs-com": "^2.6.4",
     "next": "^10.1.3",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-player": "^2.9.0",
     "simple-peer": "^9.11.0",
     "socket.io-client": "^4.0.1"
   }
