--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
+    "react-player": "^2.9.0",
     "socket.io": "^4.0.1"
   }
 }
