--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "npm install --prefix frontend && npm run next build --prefix frontend",
-    "start": "node backend/server.js",
+    "start": "node backend/server.js && npm run next --prefix frontend",
     "server": "nodemon backend/server.js",
     "client": "npm run next --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\""
